<resources>
    <string name="app_name">Akademi</string>
    <string name="join_us_btn">Join Us</string>
    <string name="join_us">Join Us</string>
    <string name="have_account">You have an account? Login</string>
    <string name="login">login</string>
    <string name="title">Akademi</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_firstName">First Name</string>
    <string name="hint_lastName">Last Name</string>
    <string name="hint_country">Country of Origin</string>
    <string name="hint_password1">Enter password</string>
    <string name="hint_password2">Confirm Password</string>
    <string name="sign_up_activity_title">Sign up</string>
    <string name="dont_have_account">Create Account? Signup</string>
    <string name="txt_forgot_password">Forgot Password? change password</string>
    <string name="login_activity_title">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_change_password_title">Change Password</string>
    <string name="fragment_verify_email_title">Verify Email</string>
    <string name="hint_email_verification_code">Enter The Code Here</string>
    <string name="btn_txt_submit">Submit</string>
    <string name="fragment_verify_email_description">We have sent a verification code to your email. Please check and use it to verify your email.</string>
    <string name="sign_up_fragment_description">Please enter your details to create an account.</string>
    <string name="login_activity_description">Please enter valid credentials to login.</string>
    <string name="send_email_verification_code">Enter your account\'s email to receive steps on how to change your password.</string>
    <string name="txt_resend_verification_code">Did not receive the code? resend</string>
    <string name="txt_submit_new_password_title">New Password</string>
    <string name="submit_new_pass_description">Enter your new password</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>