<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubmitNewPasswordFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <TextView
            android:id="@+id/textViewInSubmitNewPass_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_submit_new_password_title"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="40sp"
            />
        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_submit_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewInSubmitNewPass_title"
            android:layout_margin="10sp"
            />

        <TextView
            android:id="@+id/textViewInSubmitNewPass_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_new_pass_description"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:textStyle="italic"
            android:textSize="20sp"
            android:layout_below="@id/divider_submit_new_password"
            />
        <!--TODO add start icons-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/txtInSubmitNewPass_password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/hint_password1"
            android:layout_below="@id/textViewInSubmitNewPass_description"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/txtInSubmitNewPass_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/hint_password2"
            android:layout_below="@id/txtInSubmitNewPass_password1"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnInSubmitNewPass_submit"
            android:backgroundTint="@color/orange_red"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_txt_submit"
            android:layout_below="@id/txtInSubmitNewPass_password2"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

</FrameLayout>