<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/main"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        android:src="@drawable/pexels___9223391" />

    <Button
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="monospace"
        android:text="@string/title"
        android:textColor="@color/smoky_black"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        style="?attr/materialButtonOutlinedStyle"
        app:elevation="10dp"
        app:strokeColor="@color/smoky_black"
        />

    <Button
        android:id="@+id/btn_joinButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:backgroundTint="@color/smoky_black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/orange_red"
        android:text="@string/join_us"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"

        />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_account"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textColor="@color/smoky_black"
        android:layout_below="@+id/btn_joinButton"
        android:layout_centerHorizontal="true"

        />
</RelativeLayout>