<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendEmailVerificationCodeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <TextView
            android:id="@+id/tv_signTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_change_password_title"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="40sp"
            />
        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_signTitle"
            android:layout_margin="10sp"
            />
        <TextView
            android:id="@+id/textViewInLogin_sendVerificationCodeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_email_verification_code"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:textStyle="italic"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:layout_below="@id/divider_signup"
            />
        <!--TODO add start icons-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/input_changePasswordEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/hint_email"
            android:layout_below="@id/textViewInLogin_sendVerificationCodeTitle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnInChangePass_submit"
            android:backgroundTint="@color/orange_red"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_txt_submit"
            android:layout_below="@id/input_changePasswordEmail"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

</FrameLayout>